<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/rounded_card"
    tools:context=".StudentList">

        <TextView
            android:id="@+id/txt_maSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/maSinhVien"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_hoTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hoTen"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txt_Lop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lop"
            android:textStyle="bold"
            android:textSize="16sp"/>
</LinearLayout>