<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_tlu_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="TLU Contact"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="570dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_unit_list"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/primary"
            android:text="@string/danhBaDonVi" />

        <Button
            android:id="@+id/btn_staff_list"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/primary"
            android:text="@string/danhBaCanBo" />

        <Button
            android:id="@+id/btn_student_list"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/primary"
            android:text="@string/danhBaSinhVien" />

    </LinearLayout>

</LinearLayout>